Toàn Hảo
hoàn thành chỉnh sửa lại thanh toán theo cấu trúc database mới