@@ -33,14 +33,14 @@ public class Order {
     // One-to-many relationships with history tables (tracking status changes with timestamps)
     @OneToMany(mappedBy = "order", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     @OrderBy("createdAt DESC")
-    List<OrderPaymentStatusHistory> paymentStatusHistories = new ArrayList<>();
+    List<OrderPaymentHistory> paymentStatusHistories = new ArrayList<>();
 
     @OneToMany(mappedBy = "order", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     @OrderBy("createdAt DESC")
-    List<OrderShippingStatusHistory> shippingStatusHistories = new ArrayList<>();
+    List<OrderShippingHistory> shippingStatusHistories = new ArrayList<>();
 
     @OneToMany(mappedBy = "order", cascade = CascadeType.ALL, orphanRemoval = true)
-    List<OrderRefundRequest> orderRefundRequests = new ArrayList<>();
+    List<OrderRefund> orderRefundRequests = new ArrayList<>();
 
     @OneToOne(mappedBy = "order", cascade = CascadeType.ALL)
     Transaction transactions;
@@ -63,43 +63,30 @@ public class Order {
     // Helper methods to get current status
     @Transient
     public PaymentStatus getCurrentPaymentStatus() {
-        return paymentStatusHistories.isEmpty() ? null : paymentStatusHistories.get(0).getPaymentStatus();
+        return paymentStatusHistories.isEmpty() ? null : paymentStatusHistories.getFirst().getPaymentStatus();
     }
 
     @Transient
     public ShippingStatus getCurrentShippingStatus() {
-        return shippingStatusHistories.isEmpty() ? null : shippingStatusHistories.get(0).getShippingStatus();
-    }
-
-    // Compatibility methods for legacy enum access
-    @Transient
-    public iuh.fit.se.enternalrunebackend.entity.enums.PaymentStatus getOrderPaymentStatus() {
-        PaymentStatus current = getCurrentPaymentStatus();
-        return current != null ? iuh.fit.se.enternalrunebackend.entity.enums.PaymentStatus.valueOf(current.getStatusCode()) : null;
-    }
-
-    @Transient
-    public iuh.fit.se.enternalrunebackend.entity.enums.ShippingStatus getOrderShippingStatus() {
-        ShippingStatus current = getCurrentShippingStatus();
-        return current != null ? iuh.fit.se.enternalrunebackend.entity.enums.ShippingStatus.valueOf(current.getStatusCode()) : null;
+        return shippingStatusHistories.isEmpty() ? null : shippingStatusHistories.getFirst().getShippingStatus();
     }
 
     // Helper methods to add new status with timestamp
     public void addPaymentStatus(PaymentStatus status, String note) {
-        OrderPaymentStatusHistory history = OrderPaymentStatusHistory.builder()
+        OrderPaymentHistory history = OrderPaymentHistory.builder()
                 .order(this)
                 .paymentStatus(status)
                 .note(note)
                 .build();
-        paymentStatusHistories.add(0, history);
+        paymentStatusHistories.addFirst(history);
     }
 
     public void addShippingStatus(ShippingStatus status, String note) {
-        OrderShippingStatusHistory history = OrderShippingStatusHistory.builder()
+        OrderShippingHistory history = OrderShippingHistory.builder()
                 .order(this)
                 .shippingStatus(status)
                 .note(note)
                 .build();
-        shippingStatusHistories.add(0, history);
+        shippingStatusHistories.addFirst(history);
     }
 }
